# AzureMessageStack

./: README.md  createstack.py  messagestack.py  pyproject.toml  readstack.py  sendstack_mongo.py  user.json
api/: azuremessage_pb2.py  createstack.py  main.py
api/static/: styles.css
api/templates/: table.html
old/: genuser.py  messagestack.py  sendstack_mongo.py
protobuf/: azuremessage.proto
scripts/: genuser.py  readstack.py
