[tool.poetry]
name = "azuremessage-pb2"
version = "0.1.0"
description = ""
authors = ["Matt Matheus <matt.matheus@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
tabulate = "^0.9.0"
pymongo = "^4.6.1"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
